--- a/AnzeigenChef/Base.lproj/MainMenu.xib
+++ b/AnzeigenChef/Base.lproj/MainMenu.xib
@@ -853,7 +853,7 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="417" height="514"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <tableView identifier="maintable" focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="firstColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" columnResizing="NO" emptySelection="NO" typeSelect="NO" autosaveName="maincolumns" rowHeight="94" rowSizeStyle="automatic" headerView="j6P-A1-5DC" viewBased="YES" id="zZQ-O4-AVI">
+                                                                <tableView identifier="maintable" focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="firstColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" columnResizing="NO" typeSelect="NO" autosaveName="maincolumns" rowHeight="94" rowSizeStyle="automatic" headerView="j6P-A1-5DC" viewBased="YES" id="zZQ-O4-AVI">
                                                                     <rect key="frame" x="0.0" y="0.0" width="417" height="497"/>
                                                                     <autoresizingMask key="autoresizingMask"/>
                                                                     <size key="intercellSpacing" width="3" height="2"/>
@@ -882,7 +882,7 @@
                                                                                             <rect key="frame" x="89" y="74" width="324" height="17"/>
                                                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" usesSingleLineMode="YES" id="7tW-ld-C4P">
-                                                                                                <font key="font" metaFont="controlContent"/>
+                                                                                                <font key="font" metaFont="cellTitle"/>
                                                                                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                                             </textFieldCell>
@@ -910,7 +910,7 @@
                                                                                             <rect key="frame" x="116" y="5" width="46" height="16"/>
                                                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="222" usesSingleLineMode="YES" id="v9A-Qe-1AD">
-                                                                                                <font key="font" metaFont="controlContent"/>
+                                                                                                <font key="font" metaFont="cellTitle"/>
                                                                                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                                             </textFieldCell>
@@ -924,7 +924,7 @@
                                                                                             <rect key="frame" x="193" y="5" width="49" height="16"/>
                                                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="222" usesSingleLineMode="YES" id="6Wp-B6-PH1">
-                                                                                                <font key="font" metaFont="controlContent"/>
+                                                                                                <font key="font" metaFont="cellTitle"/>
                                                                                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                                             </textFieldCell>
@@ -933,7 +933,7 @@
                                                                                             <rect key="frame" x="330" y="5" width="83" height="17"/>
                                                                                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="right" title="24 € VB" usesSingleLineMode="YES" id="0hA-aZ-K0o">
-                                                                                                <font key="font" metaFont="controlContent"/>
+                                                                                                <font key="font" metaFont="cellTitle"/>
                                                                                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                                             </textFieldCell>
@@ -947,7 +947,7 @@
                                                                                             <rect key="frame" x="263" y="5" width="63" height="16"/>
                                                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="222" usesSingleLineMode="YES" id="QBV-5k-qMj">
-                                                                                                <font key="font" metaFont="controlContent"/>
+                                                                                                <font key="font" metaFont="cellTitle"/>
                                                                                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                                             </textFieldCell>
@@ -979,7 +979,7 @@
                                                             <rect key="frame" x="1" y="119" width="223" height="15"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                         </scroller>
-                                                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="TuD-PB-IZA">
+                                                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="TuD-PB-IZA">
                                                             <rect key="frame" x="224" y="17" width="15" height="102"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                         </scroller>
@@ -1041,7 +1041,7 @@
                                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                             <subviews>
                                                                                 <tableView appearanceType="vibrantLight" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="firstColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="84" rowSizeStyle="automatic" viewBased="YES" floatsGroupRows="NO" id="XJk-kJ-tTb">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="335" height="236"/>
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="335" height="0.0"/>
                                                                                     <autoresizingMask key="autoresizingMask"/>
                                                                                     <size key="intercellSpacing" width="3" height="2"/>
                                                                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1115,11 +1115,11 @@
                                                                             </subviews>
                                                                             <nil key="backgroundColor"/>
                                                                         </clipView>
-                                                                        <scroller key="horizontalScroller" hidden="YES" appearanceType="vibrantLight" verticalHuggingPriority="750" horizontal="YES" id="ICl-AI-GM4">
+                                                                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="ICl-AI-GM4">
                                                                             <rect key="frame" x="1" y="67.628291547298431" width="127" height="16"/>
                                                                             <autoresizingMask key="autoresizingMask"/>
                                                                         </scroller>
-                                                                        <scroller key="verticalScroller" hidden="YES" appearanceType="vibrantLight" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="sNU-Cj-8ai">
+                                                                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="sNU-Cj-8ai">
                                                                             <rect key="frame" x="224" y="17" width="15" height="102"/>
                                                                             <autoresizingMask key="autoresizingMask"/>
                                                                         </scroller>
